--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,6 +15,8 @@ div#wall div#tag-3.slick.wicked {
   display:none;
 }
 
-div#wall div.parent#tag-5 {
+div#wall div.parent#tag-5.slick {
   display:none
 }
+
+div#wall
