--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -16,7 +16,9 @@ div#wall div#tag-3.slick.wicked {
 }
 
 div#wall div.parent#tag-5.slick {
-  display:none
+  display:none;
 }
 
-div#wall
+div#wall div.parent#tag-6 {
+  display:none;
+}
