--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,10 +15,10 @@ div#wall div#tag-3.slick.wicked {
   display:none;
 }
 
-div#wall div.parent#tag-5.slick {
+
+
+div#wall div.parent div#tag-6 {
   display:none;
 }
 
-div#wall div.parent + div#tag-6 {
-  display:none;
-}
+
