--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,6 +15,9 @@ div#wall div#tag-3.slick.wicked {
   display:none;
 }
 
+div#tag-5.slick {
+  display:none;
+}
 
 
 div#wall div.parent div#tag-6 {
