--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,3 +18,7 @@ div#wall div#tag-3.slick.wicked {
 div#wall div.parent div#tag-5.slick {
   display:none;
 }
+
+div#wall div.parent div div#tag-7.slick {
+  display:none;
+}
