--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,6 +19,6 @@ div#wall div.parent div#tag-5.slick {
   display:none;
 }
 
-body div.parent div#tag-7.slick {
+body div#wall div.parent div#tag-7.slick {
   display:none;
 }
