--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,7 +15,11 @@ div#wall div#tag-3.slick.wicked {
   display:none;
 }
 
-body div#wall div.parent div#tag-5.slick {
+ div#wall div.parent div#tag-5.slick {
+  display:none;
+}
+
+body div#wall div.parent div > div#tag-6 {
   display:none;
 }
 
