--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,7 +19,7 @@ div#wall div#tag-3.slick.wicked {
   display:none;
 }
 
-body div#wall div.parent div > div#tag-6 {
+body div#wall div.parent div:last-child div#tag-6 {
   display:none;
 }
 
